--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
-<html>
-  <head>
-    <title> Sensor de ondas de espín </title>
-  </head>
-  <body>
-    <center>
-      <h1> Sensor de ondas de espín </h1>
-      <h2> Mario de Miguel Domínguez </h2>
-      <h3> IMA-UCM </h3>
-    </center>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Project</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background: #f9fafb;
+      color: #1f2937;
+    }
+    header {
+      background: #1f2937;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+      color: #d1d5db;
+    }
+    main {
+      padding: 2rem 1rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    .buttons {
+      margin-top: 2rem;
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+    .buttons a {
+      text-decoration: none;
+      background: #3b82f6;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.5rem;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+    .buttons a:hover {
+      background: #2563eb;
+    }
+    footer {
+      margin-top: 3rem;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #6b7280;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Sensor de ondas de espín</h1>
+    <p>IMA - UCM</p>
+  </header>
+
+  <main>
+    <h2>Sobre el proyecto</h2>
+    <p>
+      Prototipo de un sensor magnético, pequeño y de bajo consumo para el análisis de gases a temperatura ambiente. 
+    </p>
+
+    <div class="buttons">
+      <a href="https://github.com/n0rbb/Sensor-ondas-espin" target="_blank">GitHub</a>
+     <!--  <a href="/docs" target="_blank">Documentation</a> -->
+      <a href="mailto:mdemig02@ucm.es">Contacto</a>
+    </div>
+  </main>
+
+  <footer>
+    © 2025 INSTITUTO DE MAGNETISMO APLICADO
+  </footer>
+</body>
 </html>
